--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
-  "homepage": "https://rhubble1987.github.io/react-employee-table",
+  "homepage": "https://rhubble1987.github.io/react-employee-table/",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
